# Alchemy

./: .env.example  .gitignore  .gitmodules  .importlinter  APP_CONTRACT.md  CLAUDE.md  Dockerfile  LAPTOP_TASKS.md  Makefile  PC_TASKS.md  README.md  REVIEW.md  ROADMAP.md  TODO.md  bootstrap.ps1  docker-compose.yml  pyproject.toml
alchemy/: __init__.py  __main__.py  contracts.py  manifest.py  registry.py  schemas.py  server.py
alchemy/adapters/: __init__.py  gui_actor.py  manifest.py  ollama.py  vllm.py
alchemy/agent/: __init__.py  action_parser.py  manifest.py  pw_agent.py  pw_prompts.py  vision_agent.py
alchemy/agents/: __init__.py  flow_vs.py  manifest.py  registry.py
alchemy/api/: __init__.py  apu_api.py  click_api.py  contract_guard.py  desktop_api.py  gate_api.py  gpu_api.py  models_api.py  modules_api.py  playwright_api.py  research_api.py  settings_api.py  shadow.py  vision.py
alchemy/approval/: __init__.py  gate.py  manifest.py
alchemy/apu/: CHANGELOG.md  __init__.py  event_log.py  gateway.py  guard.py  invariants.py  manifest.py  metrics.py  model_table.py  orchestrator.py  profiler.py  registry.py  resolver.py
alchemy/assets/: __init__.py  manifest.py
alchemy/brain_physics/: EXPERIMENT.md  __init__.py  api.py  engine.py  manifest.py
alchemy/click/: __init__.py  action_executor.py  action_parser.py  functions.py  manifest.py  patterns.py  pw_action_parser.py  pw_agent.py  task_manager.py  vision_agent.py
alchemy/clients/: __init__.py  neotx_client.py  voice_callback.py
alchemy/cloud/: __init__.py  manifest.py  providers.py  setup.py
alchemy/connect/: __init__.py  hub.py  manifest.py  pairing.py  protocol.py  queue.py  router.py
alchemy/core/: __init__.py  agent.py  approval.py  escalation.py  executor.py  manifest.py  parser.py  protocols.py  trace.py
alchemy/desktop/: __init__.py  agent.py  controller.py  cursor.py  flowvs.py  manifest.py
alchemy/gate/: __init__.py  manifest.py  policies.py  reviewer.py
alchemy/gpu/: __init__.py  manifest.py  monitor.py  orchestrator.py  registry.py  resolver.py
alchemy/hole/: SPEC.md
alchemy/memory/: __init__.py  manifest.py
alchemy/models/: __init__.py  manifest.py  ollama_client.py
alchemy/neo_n/: SPEC.md  __init__.py  api.py  manifest.py  receiver.py
alchemy/playwright/: __init__.py  browser.py  escalation.py  executor.py  snapshot.py
alchemy/research/: __init__.py  collector.py  (+5 more)
alchemy/syntetic_test/: README.md  __init__.py  app.py  conftest.py  create_shortcut.py  pyproject.toml
alchemy/syntetic_test/runners/: alchemy_boot.py  voice_runner.py
config/: frozen_baseline.json  gpu_fleet.yaml  logging.py  model_profiles.json  settings.py
dashboard/: apu_staging.html
docs/: ARCHITECTURE.md  MODELS.md  PLAYWRIGHT_AGENT_PLAN.md
scripts/: alchemy_boot.pyw  alchemy_start.bat  alchemyclick_demo.py  check_schema_sync.py  click_single.py  click_test.py  demo.py  install_wsl.ps1  memory_app.pyw  migrate_memory_v2.py  test_click_blue_button.py
testing/: PC_TEST_GUIDE.md  PHILOSOPHY.md  README.md  TESTING_TODO.md  run_tests.sh  serpentine.py
tests/: conftest.py  test_action_executor.py  test_action_parser.py  test_action_parser_v2.py  test_cloud_setup.py  test_contract_guard.py  test_contracts.py  test_integration.py  test_models_api.py  test_neotx_client.py  test_ollama_client.py  test_ollama_client_v2.py  test_pw_action_parser.py  test_pw_agent.py  test_pw_prompts.py  test_registry.py  test_schemas.py  test_settings_api.py  test_settings_nested.py  test_shadow_api.py  test_task_manager.py  test_vision_agent.py  test_vision_api.py
ui/: CLAUDE.md  alchemy-browser.html  alchemy-word.html  package-lock.json  package.json  vite.config.ts
wsl/: Dockerfile  health_check.sh  setup.sh  start_all.sh  start_shadow.sh  stop_shadow.sh
(+219 files in other folders)
