[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alchemy"
version = "0.1.0"
description = "Local-first LLM core engine — Ollama model management, routing, shared API"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Daniel", email = "daniel@neosynaptics.com" },
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "litellm",
]

[project.optional-dependencies]
voice = [
    "faster-whisper",
    "piper-tts",
    "openwakeword",
    "sounddevice",
    "webrtcvad",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
