[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alchemy"
version = "0.1.0"
description = "Core engine — CPU-side heavy lifting, shadow desktop, UI-TARS vision agent"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Daniel", email = "daniel@neosynaptics.com" },
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "Pillow",
    "aiofiles",
    "psutil",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pip-tools",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration and not live'"
markers = [
    "live: tests requiring running WSL2 + shadow desktop",
    "integration: tests requiring both Alchemy + NEO-TX servers running",
]

[tool.ruff]
target-version = "py312"
line-length = 100
