[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alchemy"
version = "0.4.0"
description = "Core AI engine — voice, click automation, GPU orchestration, research, local-first"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Daniel", email = "daniel@neosynaptics.com" },
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "Pillow",
    "aiofiles",
    "psutil",
    "playwright",
    "duckduckgo-search>=7.0",
    "trafilatura>=2.0",
    "pyyaml>=6.0",
    "nvidia-ml-py>=12.0",
    "websockets",
]

[project.optional-dependencies]
voice = [
    "faster-whisper",
    "openwakeword",
    "sounddevice",
    "webrtcvad",
]
voice-piper = [
    "alchemy[voice]",
    "piper-tts",
]
tray = [
    "PyQt6",
    "PyQt6-WebEngine",
]
planner = [
    "chromadb",
]
all = [
    "alchemy[voice,voice-piper,tray,planner]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pip-tools",
    "import-linter",
]
tray-dev = [
    "alchemy[tray]",
    "pytest-qt",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration and not live and not gpu'"
markers = [
    "live: tests requiring running Alchemy server + desktop",
    "integration: tests requiring full Alchemy server running",
    "gpu: tests requiring GPU for voice/model inference",
]

[tool.ruff]
target-version = "py312"
line-length = 100
