[project]
name = "alchemy-syntetic-test"
version = "0.2.0"
description = "Synthetic testing environment for the Alchemy ecosystem"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "httpx>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
alchemy-test = "app:main"

[tool.ruff]
target-version = "py312"
line-length = 99
